--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <section id="contact">
         <h2>Contact Us</h2>
         <div class="contact">
-          <div><strong>Email:</strong> contact@techieora.com</div>
+          <div><strong>Email:</strong> admin@techieora.com</div>
           <div><strong>Location:</strong> Jaipur, India</div>
           <div>
             <strong>Website:</strong>
