--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <h2>About Us</h2>
         <p>
           <strong>Techieora</strong> is a technology company based in India,
-          dedicated to building innovative software and IoT products that
+          dedicated to building innovative software and AI solutions that
           empower businesses and individuals. With a passion for solving
           real-world challenges, we blend deep technical expertise with a vision
-          for a smarter, connected future.
+          for a smarter, AI-driven future, specializing in LLM training and
+          fine-tuning.
         </p>
       </section>
       <section id="expertise">
@@ -55,14 +56,8 @@
             <h3>Large Language Models (LLMs)</h3>
             <p>
               Harnessing the power of LLMs for advanced NLP, chatbots, content
-              generation, and business intelligence.
-            </p>
-          </li>
-          <li class="expertise-item">
-            <h3>IoT Solutions</h3>
-            <p>
-              Designing and deploying smart IoT devices and platforms for
-              connected, data-driven environments.
+              generation, business intelligence, as well as LLM training and
+              fine-tuning for custom solutions.
             </p>
           </li>
           <li class="expertise-item">
@@ -77,13 +72,6 @@
       <section id="products">
         <h2>Our Products</h2>
         <ul class="products-list">
-          <li class="product-item">
-            <h3>SmartHome Hub</h3>
-            <p>
-              Centralized IoT platform for managing smart devices in homes and
-              offices.
-            </p>
-          </li>
           <li class="product-item">
             <h3>AI Insights Suite</h3>
             <p>
@@ -102,7 +90,7 @@
             <h3>Custom LLM Chatbots</h3>
             <p>
               Conversational AI solutions tailored for customer support, sales,
-              and engagement.
+              and engagement, with options for LLM training and fine-tuning.
             </p>
           </li>
         </ul>
@@ -119,6 +107,6 @@
         </div>
       </section>
     </main>
-    <footer>&copy; 2024 Techieora. All rights reserved.</footer>
+    <footer>&copy; 2025 Techieora. All rights reserved.</footer>
   </body>
 </html>
